[package]
name = "rebunyan"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true        # Enable full link-time optimization
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.19", features = ["serde-human-readable"] }

[dev-dependencies]
rstest = "0.16.0"
