[package]
name = "rebunyan"
version = "0.1.0"
authors = ["Sviatoslav Kokurin <kokurinsv@gmail.com>"]
description = """
Fast tool to view json logs in bunyan format
"""
repository = "https://github.com/funbiscuit/rebunyan"
readme = "README.md"
keywords = ["terminal", "log", "bunyan"]
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
edition = "2021"

[profile.release]
lto = true        # Enable full link-time optimization
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
supports-color = "2.0.0"
time = { version = "0.3.19", features = ["serde-human-readable", "parsing"] }

[dev-dependencies]
rstest = "0.16.0"
